--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,11 @@ footer {
   width: "22px";
 }
 
+.cart__items {
+  display: flex;
+  justify-content: space-between;
+}
+
 /* Common */
 h1 {
   font-size: 1.8rem;
@@ -132,9 +137,12 @@ a.header__logo {
   background-color: #f02020;
   color: #fff;
   border-radius: 50%;
-  padding: 0.2rem 0.7rem;
-  font-size: 1.4rem;
+  padding: 0.2rem 0.5rem;
+  font-size: 1.2rem;
   margin-left: 0.2rem;
+  position: absolute;
+  right: 15px;
+  top: 5px;
 }
 
 .row {
